Fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@
     padding: 15px;
     border-radius: 10px;
     box-shadow: 5px 5px  #e8eaed;
+    overflow: auto;
 }
 .repo-container:hover{
     background-color: #e8eaed;
